<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AminParking</string>
    <string name="label_phone">Phone number</string>
    <string name="hint_phone">e.g. +1234567890</string>
    <string name="label_message_start">Message 1 (start parking)</string>
    <string name="hint_message_start">Start SMS text</string>
    <string name="label_message_stop">Message 2 (stop parking)</string>
    <string name="hint_message_stop">Stop SMS text</string>
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="toast_sms_denied">SMS permission is required to send parking messages.</string>
    <string name="toast_need_phone">Enter a phone number.</string>
    <string name="toast_started">Started</string>
    <string name="toast_stopped">Stopped</string>
</resources>
